--- a/views/main.scss
+++ b/views/main.scss
@@ -117,6 +117,9 @@ header {
       @mixin menu-item($theta) {
         color: hsl($theta, 40%, 40%);
         border-top: 4px solid hsl($theta, 40%, 70%);
+        &.selected {
+          border-bottom: 2px solid hsl($theta, 40%, 70%) !important;
+        }
         &:hover, &:focus {
           color: hsl($theta, 100%, 100%);
           box-shadow: inset 0 56px hsl($theta, 40%, 70%);
