Update about and index page

--- a/views/about.erb
+++ b/views/about.erb
@@ -1,10 +1,17 @@
-<h3>About</h3>
+<h3>About me</h3>
 <p>
-	I'm a 12<sup>th</sup> grade programming enthusiast living in Portland, Oregon.
+	Thanks for visiting! I'm <strong>Stanley Cen</strong>, a 12<sup>th</sup> grade student at
+	Westview High School in Portland, Oregon.
 </p>
 <p>
-	I love computer science and I have been programming since 3<sup>rd</sup> grade. I'm proficient in more than 10 programming languages, including C++, C, C&#9839;, Java, Python, Ruby, MySQL, PHP, HTML, Javascript, CSS, and Lua.
+	I'm passionate about computer science and am always trying to learn new things. In 3<sup>rd</sup> grade, I first started C++ and fell in love with programming. Currently, I'm proficient in more than 10 programming languages, including C++, C, C#, Java, Python, Ruby, MySQL, PHP, HTML, Javascript, CSS, and Lua.
 </p>
+<h3>About the site</h3>
+<p>
+	This website is an open-source Sinatra web application running on Ruby 1.9.3 and lives somewhere
+	in the Heroku cloud. It's HTML5 and CSS3 standards compliant and is powered by lots of awesome things made by other amazing people:
+	jQuery, Sass, Fontello and Fancybox.
 </p>
-	I compete in programming contests, most notably the <a href="http://usaco.org">USA Computing Olympiad</a>.
+<p>
+	Check out <a href="/humans.txt">humans.txt</a>!
 </p>
