--- a/views/contact.erb
+++ b/views/contact.erb
@@ -20,7 +20,7 @@
 		<span><a href="http://facebook.com/stanley.cen">stanley.cen</a></span>
 	</div>
 	<div class="contact">
-		<i class="icon-gplus-squared"></i>
+		<i class="icon-gplus"></i>
 		<span><a href="https://plus.google.com/105156423030564066738">jiecenzhao</a></span>
 	</div>
 </div>
