--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,7 @@
 <p>
-	Hey there! I'm <strong>Stanley Cen</strong>, a senior living in Portland, Oregon, and a programming enthusiast.
+	<%= GREETINGS.sample %> I'm a high school senior and computer science enthusiast living in Portland, Oregon. I <strong>love</strong> <em>making stuff</em> and here you'll find my projects and the stories behind them. Find out more about me <a href="/about">here</a>!
 </p>
 <p>
-	 I'm interested in all things related to computer science, am proficient in more than 10 programming languages and currently I'm interested in algorithms and reverse engineering.
+	I occasionally <strong>blog</strong> about my life, projects I've worked on, and new things I've learned. Have a look around!
 </p>
-<p>
-	Here you'll find a <a href="/blog">blog</a> I occasionally post in and various projects I've worked on. Many of my projects are <a href="http://github.com/scen/">open source</a>.
-</p>
+
