Change about and index page

--- a/views/about.erb
+++ b/views/about.erb
@@ -4,7 +4,17 @@
 	Westview High School in Portland, Oregon.
 </p>
 <p>
-	I'm passionate about computer science and am always trying to learn new things. In 3<sup>rd</sup> grade, I first started C++ and fell in love with programming. Currently, I'm proficient in more than 10 programming languages, including C++, C, C#, Java, Python, Ruby, MySQL, PHP, HTML, Javascript, CSS, and Lua.
+	I'm passionate about computer science and am always trying to learn new things. In 3<sup>rd</sup> grade, I first started C++ and fell in love with programming. Currently, I'm proficient in more than 10 programming languages, including C++, C, C#, Java, Python, Ruby, MySQL, PHP, HTML, Javascript, CSS, and Lua. I've done projects in
+	reverse engineering, computer vision, web development and mobile &amp; desktop application development.
+</p>
+<p>
+	I have actively competed in programming contests since 9<sup>th</sup> grade and
+	was invited to the <a href="http://usaco.org">USA Computing Olympiad</a> finalist camp
+	my sophomore and junior years (2012 &amp; 2013).
+</p>
+<p>
+	I also attended the 2013 <a href="http://www.cee.org/research-science-institute">Research Science Institute</a>, where I conducted research under Mr. Andrew Wang at the
+	MIT Computer Science and Artificial Intelligence Lab (CSAIL).
 </p>
 <h3>About the site</h3>
 <p>
