--- a/views/contact.erb
+++ b/views/contact.erb
@@ -4,23 +4,23 @@
 </p>
 <div id="contacts">
 	<div class="contact">
-		<i class="icon-mail-alt"></i>
+		<i class="icon-mail-alt" title="Email"></i>
 		<span><a href="mailto:me@stanleycen.com">me@stanleycen.com</a></span>
 	</div>
 	<div class="contact">
-		<i class="icon-github"></i>
+		<i class="icon-github" title="Github"></i>
 		<span><a href="http://github.com/scen">scen</a></span>
 	</div>
 	<div class="contact">
-		<i class="icon-skype"></i>
+		<i class="icon-skype" title="Skype"></i>
 		<span><a href="skype:priority_queue">priority_queue</a></span>
 	</div>
 	<div class="contact">
-		<i class="icon-facebook"></i>
+		<i class="icon-facebook" title="Facebook"></i>
 		<span><a href="http://facebook.com/stanley.cen">stanley.cen</a></span>
 	</div>
 	<div class="contact">
-		<i class="icon-gplus"></i>
+		<i class="icon-gplus" title="Google+"></i>
 		<span><a href="https://plus.google.com/105156423030564066738">jiecenzhao</a></span>
 	</div>
 </div>
