--- a/views/layout.erb
+++ b/views/layout.erb
@@ -25,6 +25,7 @@
 	<script type="text/javascript" src="/main.js"></script>
 </head>
 <body>
+	<noscript><p><img src="http://analytics.stanleycen.com/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
 	<header>
 		<h1><a href="/">stanley cen</a></h1>
 		<nav>
