Update about page

--- a/views/about.erb
+++ b/views/about.erb
@@ -16,6 +16,12 @@
 	I also attended the 2013 <a href="http://www.cee.org/research-science-institute">Research Science Institute</a>, where I conducted research under Mr. Andrew Wang at the
 	MIT Computer Science and Artificial Intelligence Lab (CSAIL).
 </p>
+<p>
+	Outside of school and programming, I love the outdoors. I've been swimming
+	competitively for 5 years and enjoy hiking, camping, and playing ultimate frisbee.
+	I also like music - especially playing the piano and discovering &amp; listening to
+	new songs!
+</p>
 <h3>About the site</h3>
 <p>
 	This website is an open-source Sinatra web application running on Ruby 1.9.3 and lives somewhere
