--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,6 @@
 <p>
-	<%= GREETINGS.sample %> I'm a high school senior and computer science enthusiast living in Portland, Oregon. I <strong>love</strong> <em>making stuff</em> and here you'll find my projects and the stories behind them. Find out more about me <a href="/about">here</a>!
+	<strong><%= GREETINGS.sample %></strong> I'm a high school senior and computer science enthusiast living in Portland, Oregon. I <strong>love</strong> <em>making stuff</em> and here you'll find my projects and the stories behind them. Find out more about me <a href="/about">here</a>!
 </p>
 <p>
 	I occasionally blog about my life, projects I've worked on, and new things I've learned. Have a look around!
 </p>
-
