Redesign index page

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,15 @@
-<p>
-	<strong><%= GREETINGS.sample %></strong> I'm a high school senior and computer science enthusiast living in Portland, Oregon. I <strong>love</strong> <em>making stuff</em> and here you'll find my projects and the stories behind them. Find out more about me <a href="/about">here</a>!
-</p>
-<p>
+<div class="quote">
+	<p class="quote">
+		<strong><%= GREETINGS.sample %></strong>
+	</p>
+	<p class="quote">
+		I'm a high school senior and computer science enthusiast living in Portland, Oregon.
+	</p>
+	<p class="quote">
+		I love <em>making stuff</em> and here you'll find my projects and the stories behind them.
+	</p>
+</div>
+<!-- <p>
 	I occasionally blog about my life, projects I've worked on, and new things I've learned. Have a look around!
-</p>
+</p>-->
+<!-- <h2>Featured posts from the blog</h2> -->
