--- a/views/main.scss
+++ b/views/main.scss
@@ -230,14 +230,14 @@ section {
       display: block;
       line-height: 32px;
       vertical-align: bottom;
-      border-bottom: 1px solid #efefef;
+      // border-bottom: 1px solid #efefef;
       padding-bottom: 4px;
       margin-bottom: 16px;
       h2 {
         font-size: 22px;
         float: left;
         margin-bottom: 0px;
-        max-width: 500px;
+        max-width: 600px;
         a {
           color: inherit;
           border: none;
@@ -251,6 +251,31 @@ section {
         font-size: 14px;
       }
     }
+  }
+  div.footer {
+    margin-bottom: 16px;
+  }
+  span.read-more {
+    text-align: right;
+    display: block;
+    a {
+      background: #94acd1;
+      color: #ffffff;
+      border-radius: 3px;
+      height: 30px !important;
+      line-height: 30px;
+      width: 110px !important;
+      border-bottom: none !important;
+      text-align: center;
+      display: block;
+      float: right;
+      &:hover, &:focus {
+        background: #A9C2E8;
+      }
+    }
+  }
+  .post:last-of-type {
+    border-bottom: none !important;
   }
   ul.previous-posts {
     display: block;
