--- a/views/layout.erb
+++ b/views/layout.erb
@@ -41,7 +41,7 @@
 	</section>
 	<footer>
 		&copy; 2013 Stanley Cen<% if !is_heroku? or (is_heroku? and $heroku and $last_commit and $the_commit) %>; deployed commit <a href="https://github.com/scen/stanleycen.com/commit/<%= get_commit_sha %>">
-		<%= get_commit_sha[0...7] %></a> <%= time_ago_in_words(get_commit_time) + " ago" %>: <%= '"' + get_commit_msg.split(/\n/).first + '"' %><% end %>
+		<%= get_commit_sha[0...7] %></a> <%= get_commit_time.to_pretty %>: <%= '"' + get_commit_msg.split(/\n/).first + '"' %><% end %>
 	</footer>
 </body>
 </html>
