Update contact page

--- a/views/contact.erb
+++ b/views/contact.erb
@@ -21,6 +21,6 @@
 	</div>
 	<div class="contact">
 		<i class="icon-gplus" title="Google+"></i>
-		<span><a href="https://plus.google.com/105156423030564066738">jiecenzhao</a></span>
+		<span><a href="https://plus.google.com/105156423030564066738">scen</a></span>
 	</div>
 </div>
