--- a/views/index.erb
+++ b/views/index.erb
@@ -9,7 +9,7 @@
 		I love <em>making stuff</em> and here you'll find my projects and the stories behind them.
 	</p>
 </div>
-<!-- <p>
-	I occasionally blog about my life, projects I've worked on, and new things I've learned. Have a look around!
-</p>-->
-<!-- <h2>Featured posts from the blog</h2> -->
+<div class="latest">
+	<h1>Latest blog post</h1>
+	<div class="inner"><%= erb :_post, locals: {post: Post.all.first.last, abbrev: true} %></div>
+</div>
