--- a/views/main.scss
+++ b/views/main.scss
@@ -188,15 +188,36 @@ section {
     }
   }
   div.quote {
-    margin-top: 32px;
+    text-align: center;
     margin-bottom: 32px;
+    border-bottom: 1px solid #efefef;
   }
 
-  .quote {
+  p.quote {
     // text-align: center;
-    font-size: 24px !important;
-    font-weight: 300 !important;
-    line-height: 40px !important;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 30px;
+    strong {
+      // color: #3498db;
+      text-align: center;
+      font-size: 24px !important;
+      line-height: 40px !important;
+    }
+  }
+  div.latest {
+    h1 {
+      display: block;
+      padding-bottom: 16px;
+      font-size: 24px;
+    }
+    div.inner {
+      // padding-left: 8px;
+      // padding-right: 8px;
+      .post .masthead  h1, h2, h3, h4, h5, h6 {
+        font-size: 1.28571428571em;
+      }
+    }
   }
   p.center {
     text-align: center;
