Fix c++ tag and css

--- a/views/main.scss
+++ b/views/main.scss
@@ -414,6 +414,10 @@ section {
             background-color: #FFE0BD;
             color: #333333;
           }
+          &.java {
+            color: #ffffff;
+            background-color: #0099cc;
+          }
           &.php {
             background-color: #E2BDFF;
             color: #333333;
