Update about page
SAT tomorrow... I should sleep

--- a/views/about.erb
+++ b/views/about.erb
@@ -9,8 +9,8 @@
 </p>
 <p>
 	I have actively competed in programming contests since 9<sup>th</sup> grade and
-	was invited to the <a href="http://usaco.org">USA Computing Olympiad</a> finalist camp
-	my sophomore and junior years (2012 &amp; 2013).
+	attended the <a href="http://usaco.org">USA Computing Olympiad</a> <a href="http://www.usaco.org/index.php?page=camp">finalist camp</a>
+	my <a href="http://www.usaco.org/index.php?page=finalists12">sophomore</a> and <a href="http://www.usaco.org/index.php?page=finalists13">junior</a> years (2012 &amp; 2013).
 </p>
 <p>
 	I also attended the 2013 <a href="http://www.cee.org/news/research-science-institute-mit-hosts-81-high-school-students">Research Science Institute</a>, where I conducted research under Mr. Andrew Wang at the
@@ -29,5 +29,5 @@
 	jQuery, Sass, Fontello and Fancybox.
 </p>
 <p>
-	Check out <a href="/humans.txt">humans.txt</a>!
+	<a href="/humans.txt">humans.txt</a>
 </p>
