--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,47 +1,41 @@
 <!doctype html>
 <html>
-<head>
-	<title>
-		<% if @title %>
-			<%= @title %> &mdash; Stanley Cen
-		<% else %>
-			Stanley Cen
-		<% end %>
-	</title>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'/>
-	<link href='/fontello.css' rel="stylesheet" type="text/css" />
-	<link href="/main.css" rel="stylesheet"/>
-	<link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/fancybox/2.1.5/helpers/jquery.fancybox-buttons.css" />
-	<link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/fancybox/2.1.5/helpers/jquery.fancybox-thumbs.css" />
-	<link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/fancybox/2.1.5/jquery.fancybox.css" />
-	<script type="text/javascript" src="/ga.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-	<script type="text/javascript" src="//cdn.jsdelivr.net/fancybox/2.1.5/helpers/jquery.fancybox-buttons.js"></script>
-	<script type="text/javascript" src="//cdn.jsdelivr.net/fancybox/2.1.5/helpers/jquery.fancybox-media.js"></script>
-	<script type="text/javascript" src="//cdn.jsdelivr.net/fancybox/2.1.5/helpers/jquery.fancybox-thumbs.js"></script>
-	<script type="text/javascript" src="//cdn.jsdelivr.net/fancybox/2.1.5/jquery.fancybox.js"></script>
-	<script type="text/javascript" src="//cdn.jsdelivr.net/fancybox/2.1.5/jquery.fancybox.pack.js"></script>
-	<script type="text/javascript" src="/main.js"></script>
-</head>
-<body>
-	<noscript><p><img src="http://analytics.stanleycen.com/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
-	<header>
-		<h1><a href="/">stanley cen</a></h1>
-		<nav>
-			<a href="/blog" class="<%= get_nav_classes 'blog' %>">blog</a>
-			<a href="/projects" class="<%= get_nav_classes 'projects' %>">projects</a>
-			<a href="http://github.com/scen/" class="<%= get_nav_classes 'github' %>">github</a>
-			<a href="/contact" class="<%= get_nav_classes 'contact' %>">contact</a>
-			<a href="/about" class="<%= get_nav_classes 'about' %>">about</a>
-		</nav>
-	</header>
-	<section>
-		<%= yield %>
-	</section>
-	<footer>
-		&copy; 2013 Stanley Cen<% if !is_heroku? or (is_heroku? and $heroku and $last_commit and $the_commit) %>; deployed commit <a href="https://github.com/scen/stanleycen.com/commit/<%= get_commit_sha %>">
-		<%= get_commit_sha[0...7] %></a> <%= get_commit_time.to_pretty %>: <%= '"' + get_commit_msg.split(/\n/).first + '"' %><% end %>
-	</footer>
-</body>
+	<head>
+		<title>Stanley Cen</title>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'/>
+		<link href="//cdnjs.cloudflare.com/ajax/libs/normalize/2.1.3/normalize.min.css" rel="stylesheet" type="text/css"/>
+		<link href="/main.css" rel="stylesheet" type="text/css"/>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script src="//code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
+		<script src="jquery.mobiledetect.js"></script>
+		<script src="/skel.min.js"></script>
+		<script src="/skel-panels.min.js">
+		{
+		}
+		</script>
+		<script src="/main.js"></script>
+	</head>
+	<body>
+		<header id="header">
+			<h1><a href="/">stanley cen</a></h1>
+			<nav>
+				<a href="/blog" class="<%= get_nav_classes 'blog' %>">blog</a>
+				<a href="/projects" class="<%= get_nav_classes 'projects' %>">projects</a>
+				<a href="http://github.com/scen/" class="<%= get_nav_classes 'github' %>">github</a>
+				<a href="/contact" class="<%= get_nav_classes 'contact' %>">contact</a>
+				<a href="/about" class="<%= get_nav_classes 'about' %>">about</a>
+			</nav>
+		</header>
+		<section id="home">
+			<div id="home-shoutout">
+				<div>
+					<h1>Hey there!</h1>
+					<h3>I'm <strong>Stanley Cen</strong>, a high school senior and computer science enthusiast living in Portland, Oregon.</h3>
+				</div>
+			</div>
+			<div id="scroll-notifier">
+			</div>
+		</section>
+		<div style="min-height: 5000px"></div>
+	</body>
 </html>
