--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,13 +6,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/normalize/2.1.3/normalize.min.css" rel="stylesheet" type="text/css"/>
 		<link href="/main.css" rel="stylesheet" type="text/css"/>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<script src="//code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
 		<script src="jquery.mobiledetect.js"></script>
-		<script src="/skel.min.js"></script>
-		<script src="/skel-panels.min.js">
-		{
-		}
-		</script>
 		<script src="/main.js"></script>
 	</head>
 	<body>
@@ -34,6 +28,58 @@
 				</div>
 			</div>
 			<div id="scroll-notifier">
+			</div>
+		</section>
+		<section id="content">
+			<div id="mission">
+				<div class="inner">
+					<h1>I love <span class="highlight">making stuff</span> and here you'll find my projects and the stories behind them.</h1>
+				</div>
+			</div>
+			<!-- <div id="blog-recent">
+				<div class="header">
+					<h1 class="header">Recent blog <span class="highlight">posts</span></h1>
+				</div>
+			</div> -->
+			<div id="about">
+				<div class="header">
+					<h1 class="header">About <span class="highlight">me</span></h1>
+				</div>
+				<div class="content">
+					<div class="row">
+						<div class="left">
+							<div class="wrapper">
+								<div class="timeline">
+									<div class="event">
+										<span class="date">
+											May 2013
+										</span>
+										<span class="circle"></span>
+										<span class="bar"></span>
+										<span class="label">
+											Yolo
+										</span>
+									</div>
+									<div class="event">
+										<span class="date">
+											Mayssss 2013
+										</span>
+										<span class="circle"></span>
+										<span class="bar"></span>
+										<span class="label">
+											Yolo
+										</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="right">
+							<div class="content">
+								Hello world blah blah.
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
 		<div style="min-height: 5000px"></div>
