--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,11 +2,13 @@
 <html>
 	<head>
 		<title>Stanley Cen</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'/>
 		<link href="//cdnjs.cloudflare.com/ajax/libs/normalize/2.1.3/normalize.min.css" rel="stylesheet" type="text/css"/>
 		<link href="/main.css" rel="stylesheet" type="text/css"/>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script src="jquery.mobiledetect.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 		<script src="/main.js"></script>
 	</head>
 	<body>
@@ -16,14 +18,14 @@
 				<a href="/blog" class="<%= get_nav_classes 'blog' %>">blog</a>
 				<a href="/projects" class="<%= get_nav_classes 'projects' %>">projects</a>
 				<a href="http://github.com/scen/" class="<%= get_nav_classes 'github' %>">github</a>
-				<a href="/contact" class="<%= get_nav_classes 'contact' %>">contact</a>
-				<a href="/about" class="<%= get_nav_classes 'about' %>">about</a>
+				<a href="#about" class="<%= get_nav_classes 'about' %>">about</a>
+				<a href="#contact" class="<%= get_nav_classes 'contact' %>">contact</a>
 			</nav>
 		</header>
 		<section id="home">
 			<div id="home-shoutout">
 				<div>
-					<h1>Hey there!</h1>
+					<h1><%= GREETINGS.sample %></h1>
 					<h3>I'm <strong>Stanley Cen</strong>, a high school senior and computer science enthusiast living in Portland, Oregon.</h3>
 				</div>
 			</div>
@@ -52,24 +54,53 @@
 								<div class="timeline">
 									<div class="event">
 										<span class="date">
-											May 2013
+											3<sup>rd</sup> grade
 										</span>
 										<span class="circle"></span>
 										<span class="bar"></span>
 										<span class="label">
-											Yolo
+											Started programming in C
 										</span>
 									</div>
 									<div class="event">
 										<span class="date">
-											Mayssss 2013
+											10<sup>th</sup> grade
 										</span>
 										<span class="circle"></span>
 										<span class="bar"></span>
 										<span class="label">
-											Yolo
+											USA Computing Olympiad Finalist
 										</span>
 									</div>
+									<div class="event">
+										<span class="date">
+											11<sup>th</sup> grade
+										</span>
+										<span class="circle"></span>
+										<span class="bar"></span>
+										<span class="label">
+											USA Computing Olympiad Finalist
+										</span>
+									</div>
+									<div class="event">
+										<span class="date">
+										</span>
+										<span class="circle"></span>
+										<span class="bar"></span>
+										<span class="label">
+											Research Science Institute Scholar
+										</span>
+									</div>
+								<!-- 	<div class="event">
+										<span class="date">
+											12<sup>th</sup> grade
+										</span>
+										<span class="circle"></span>
+										<span class="bar"></span>
+										<span class="label">
+											#yolo
+										</span>
+									</div> -->
 								</div>
 							</div>
 						</div>
@@ -79,6 +110,11 @@
 							</div>
 						</div>
 					</div>
+				</div>
+			</div>
+			<div id="contact">
+				<div class="header">
+					<h1 class="header">Contact <span class="highlight">me</span></h1>
 				</div>
 			</div>
 		</section>
